# shuffler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test_and_typecheck.yaml
src/shuffler/: deck.py  deck_classes.py  deck_statistics.py  main.py  shuffles.py
src/shuffler/deck_statistics/: gaussian_utils.py  position_stat.py  sequence_stat.py  stats_main.py
tests/: test_seq.py
