[project]
name = "shuffler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pathlib>=1.0.1",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "shuffler.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I",
]
